ORGS-30 Read sort param
