# docs/swagger.json
@@ -10,7 +10,7 @@
             "name": "Apache 2.0",
             "url": "http://www.apache.org/licenses/LICENSE-2.0.html"
         },
-        "version": "0.1.0"
+        "version": "0.2.0"
     },
     "host": "localhost:8081",
     "basePath": "/",
@@ -180,6 +180,12 @@
                         "name": "ehid",
                         "in": "path",
                         "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "Start Date's sorting direction (asc or desc)",
+                        "name": "sort",
+                        "in": "query"
                     }
                 ],
                 "responses": {
