# internal/member/controller.go
@@ -2,6 +2,7 @@ package member
 
 import (
 	"net/http"
+	"strings"
 
 	"github.com/go-chi/chi"
 	"github.com/mrexmelle/connect-org/internal/config"
@@ -40,11 +41,15 @@ func (c *Controller) GetNodes(w http.ResponseWriter, r *http.Request) {
 // @Description Get a member's current organization nodes
 // @Produce json
 // @Param ehid path string true "Employee Hash ID"
+// @Param sort query string false "Start Date's sorting direction (asc or desc)"
 // @Success 200 {object} GetHistoryResponseDto "Success Response"
 // @Failure 400 "BadRequest"
 // @Failure 500 "InternalServerError"
 // @Router /members/{ehid}/history [GET]
 func (c *Controller) GetHistory(w http.ResponseWriter, r *http.Request) {
-	data, err := c.MembershipService.RetrieveByEhid(chi.URLParam(r, "ehid"))
+	data, err := c.MembershipService.RetrieveByEhidOrderByStartDate(
+		chi.URLParam(r, "ehid"),
+		strings.ToUpper(r.URL.Query().Get("sort")),
+	)
 	dtobuilderwithdata.New[[]membership.ViewEntity](&data, err).RenderTo(w)
 }
